2014-12-08  Matt Curtis  <matt.r.curtis@gmail.com>  (tiny change)

	* pulse.el (pulse-momentary-highlight-one-line): Respect the POINT
	argument (bug#17260).

2014-11-09  Eric Ludlam  <zappo@gnu.org>

	* semantic.el (semantic-mode): Add/remove 3
	completion-at-point-functions.
	(semantic-completion-at-point-function): Removed.
	(semantic-analyze-completion-at-point-function)
	(semantic-analyze-notc-completion-at-point-function)
	(semantic-analyze-nolongprefix-completion-at-point-function): New
	completion at point functions.

	* semantic/doc.el (semantic-doc-snarf-comment-for-tag): Fix case
	when comment-end is empty string.

	* semantic/debug.el
	(semantic-debug-parser-debugger-source): New buffer local
	variable.
	(semantic-debug-interface): Add 'nil' initform to overlays.
	(semantic-debug-mode): Remove read-only tags from buffers on exit.
	(semantic-debug): Add autoload cookie.  Force the language
	specific debugger to load.

	* semantic/db.el (generic::semanticdb-full-filename): New generic
	method to allow this method to be used on buffer names via an
	associated database.

	* semantic/symref.el
	(semantic-symref-cleanup-recent-buffers-fcn): When cleaning up
	buffers, don't clean up buffers that are being used (i.e., in a
	window) when the hook fires.
	(semantic-symref-recently-opened-buffers): New tracking variable.
	(semantic-symref-cleanup-recent-buffers-fcn): New hook fcn.
	(semantic-symref-result-get-tags): Move logic into
	`semantic-symref-hit-to-tag-via-buffer', and cleanup buffers via
	the symref cleanup function in post-command-hook.
	(semantic-symref-hit-to-tag-via-buffer): Logic that used to be
	from above.
	(semantic-symref-hit-to-tag-via-db): New.

	* semantic/analyze.el:
	(semantic-analyze-find-tag-sequence-default): If first entry in
	sequence is the only one, apply tagclass filter.
	(semantic-analyze-princ-sequence): Show slot even if empty.
	(semantic-analyze-find-tag-sequence)
	(semantic-analyze-find-tag-sequence-default): Add flags argument.